# thalaivarswap

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
app/: globals.css  layout.tsx  page.tsx
app/api/oneinch/[chainId]/allowance/: route.ts
app/api/oneinch/[chainId]/approve/: route.ts
app/api/oneinch/[chainId]/quote/: route.ts
app/api/oneinch/[chainId]/swap/: route.ts
app/api/portfolio/: route.ts
app/api/swaps/execute-ui/: route-with-htlc.ts  route.ts
app/api/swaps/monitor/: route.ts
app/api/token-holders/: route.ts
app/dashboard/: page.tsx
app/swap/: page.tsx
components/: CrossChainSwap.tsx  Navigation.tsx
cross-chain-resolver/: .gitignore  README.md
cross-chain-resolver/broadcast/DeployMinimal.s.sol/11155111/: run-latest.json
cross-chain-resolver/broadcast/DeployStep2.s.sol/11155111/: run-latest.json
cross-chain-resolver/contracts/src/: EnhancedResolver.sol
cross-chain-resolver/script/: DeployAll.s.sol  DeployEnhancedResolver.s.sol  DeployEnhancedResolverV2.s.sol  DeploySimple.s.sol  DeployStep2.s.sol
cross-chain-resolver/tests/: main.spec.ts
evmrelayer/: evmrelayer.sol
lib/: asset-hub-contract.ts  asset-hub-revive.ts  bidirectional-relayer.ts  cross-chain-relayer.ts  direct-fusion-api.ts  formatOutputAmount.ts  fusion-sdk.ts  getChainConfig.ts  polkadotrelayer.contract  polkadotrelayer.json
polkadotrelayer/: .gitignore  Cargo.toml  lib.rs
polkadotrelayer/src/: lib.rs  partial-fills.rs
scripts/: analyze-failed-tx.ts  check-bob-balance.ts  check-dot-balance.ts  check-dot-contract.ts  complete-cross-chain-demo.ts  comprehensive-tx-verify.ts  cross-chain-verifier.ts  debug-explorer.ts  demo-dot-to-eth.ts  demo-eth-to-dot.ts  deploy-contracts.ts  deploy-dot-contract.ts  get-error-details.ts  identify-network.ts  network-debug.ts  prepare-address-mapping.ts  simple-error-analysis.ts  test-all-read-functions.ts  test-contract-params.ts  test-dot-contract-call.ts  test-fusion-auth.ts  test-ink-encoding.ts  test-read-function.ts  test-read-pol.ts  test-secret-submission.ts  test-write-pol.ts  verification-demo.ts  verify-block.ts  verify-transaction.ts
utils/: swap.ts
