[package]
name = "polkadotrelayer"
version = "0.1.0"
authors = ["vairamuthu vairamuthu@polkassembly.io"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

# Add profile optimizations for RISC-V target
[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = false

[profile.dev]
panic = "abort"

# Workspace configuration
[workspace]